bootstrap/argocd/namespace.yaml
# home-infra/bootstrap/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
